# Shein-suto-verse

./: README.md  bot.py  config.py  database.py  pyproject.toml  replit.md  requirements.txt  run_scraper.py  scraper.py  shein_monitor.db  user_database.py
